fixed AvatarLabels in EntityCard overflow (#165)

--- a/frontend/amundsen_application/static/js/components/common/AvatarLabel/styles.scss
+++ b/frontend/amundsen_application/static/js/components/common/AvatarLabel/styles.scss
@@ -17,6 +17,7 @@
   margin-bottom: auto;
   cursor: inherit;
   font-weight: normal;
+  min-width: 0;
 }
 
 .sb-avatar > img {
